Adopt List.of() and Set.of(), drop Arrays.asList()
https://stackoverflow.com/a/46579348