@@ -517,7 +517,7 @@ public abstract class AbstractSection<T extends AbstractSection<T>> {
 	}
 	
 	public static <U extends AbstractSection<U>> List<U> flattenSubSections(U section) {
-		return flattenSubSections(Arrays.asList(section));
+		return flattenSubSections(List.of(section));
 	}
 	
 	public static <U extends AbstractSection<U>> List<U> flattenSubSections(List<? extends U> sections) {
