@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.stream.Collectors;
@@ -79,7 +78,7 @@ public class DevanagariIAST implements Selectorizable {
 		System.out.printf("Total: %d, hindi: %d, non-hindi: %d%n", pages.length, hindi.size(), nonHindi.size());
 		
 		String out = makePage(hindi, nonHindi);
-		Files.write(Paths.get(fList), Arrays.asList(out));
+		Files.write(Paths.get(fList), List.of(out));
 		
 		if (edit) {
 			wb.edit(wikipage, out, "aktualizacja", false, false, -2, null);
